# robo

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  frame.h  install-nlopt.sh  robotmodel.yaml
examples/: dynamics.py  kinematics.py
include/: chain.h  chain.hpp  core.h  dynamics.hpp  forward_kinematics.h  forward_kinematics.hpp  frame.h  frame.hpp  inertia.hpp  inverse_kinematics.hpp  joint.h  joint.hpp  kinematics.hpp  link.h  link.hpp  test_utilities.hpp  twist.hpp  typedef.hpp  wrench.hpp
include/robo/: body.hpp  chain.hpp  dynamics.hpp  force.hpp  friction.hpp  inertia.hpp  joint.hpp  kinematics.hpp  kinematics_forward.hpp  kinematics_inverse.hpp  model_factory.hpp  motion.hpp  rotation.hpp  transform.hpp  typedef.hpp  util.hpp
python/: robotmodel.py
src/: chain.cpp  dynamics.cpp  forward_kinematics.cpp  frame.cpp  inverse_kinematics.cpp  joint.cpp  kinematics.cpp  link.cpp  test.cpp  test.cppx  test_ccd.cpp  test_kinematics_simple.cpp  test_time.cpp  test_tracking.cpp  test_unit.cpp  twist.cpp  unit_tests.cpp
src/robo/: dynamics.cpp  kinematics_forward.cpp  kinematics_inverse.cpp  model_factory.cpp
src/robo/pyapi/: helpers.hpp  kindyn_pyapi.cpp
src/robo/test/: inverse_kinematics.cpp  test_util.hpp  time.cpp  unit.cpp
